@@ -1,3 +1,10 @@
+2008-08-08  Johan Dahlin  <johan@flumotion.com>
+
+	* flumotion/component/encoders/vp6/flv*:
+	Remove old files.
+	* flumotion/component/encoders/vp6/vp6.xml:
+	Add vp6-component which contains an __init__.py a vp6.py
+
 2008-08-01  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/component/encoders/flv/Makefile.am:
